--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "cornerstone-on-arum",
+  "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
