--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "postcss": "8.4.41",
     "tailwindcss": "3.4.10",
     "autoprefixer": "10.4.19"
+  },
+  "overrides": {
+    "typescript": "5.6.3"
   }
 }
