--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "typescript": "5.6.3",
+    "typescript": "^5.6.3",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@types/node": "20.11.0",
