--- a/package.json
+++ b/package.json
@@ -1,30 +1,23 @@
 {
   "name": "cornerstone-on-arum",
-  "version": "1.0.0",
   "private": true,
+  "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "next": "14.2.5",
+    "next": "14.2.16",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@types/node": "24.5.2",
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0",
-    "autoprefixer": "^10.4.21",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.5",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.14",
-    "typescript": "5.6.3"
-  },
-  "overrides": {
-    "typescript": "5.6.3"
+    "@types/react": "19.1.13",
+    "autoprefixer": "10.4.20",
+    "postcss": "8.4.47",
+    "tailwindcss": "3.4.10",
+    "typescript": "5.9.2"
   }
 }
