--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "latest",
+    "@tailwindcss/postcss": "^4.1.13",
     "@vercel/analytics": "1.3.1",
     "ai": "latest",
     "autoprefixer": "^10.4.20",
@@ -49,7 +50,7 @@
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "14.2.16",
+    "next": "^15.5.4",
     "next-themes": "latest",
     "react": "^18",
     "react-day-picker": "9.8.0",
@@ -61,7 +62,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
-    "zod": "3.25.67"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@types/node": "^22",
@@ -69,7 +70,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5"
   }
 }
