--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
                     "build":  "next build",
                     "dev":  "next dev",
                     "lint":  "next lint",
-                    "start":  "next start"
+                    "start":  "next start",
+                    "postbuild":  "next-sitemap"
                 },
     "dependencies":  {
                          "@ai-sdk/openai":  "^2.0.42",
