--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 ﻿{
-    "name":  "my-v0-project",
+    "name":  "cornerstoneonarum",
     "version":  "0.1.0",
     "private":  true,
     "scripts":  {
