chore: keep pnpm; tidy ignores; layout/css updates

--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,9 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# lockfiles we don't use & generated files
+package-lock.json
+public/sitemap-*.xml
+*.bak
+*.backup-*
+*.broken-*
 
-# dependencies
-/node_modules
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# env files
-.env*
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# optional helper scripts (uncomment if you don't want them in git)
+# *.cmd
