--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.42",
+    "ai": "^5.0.60",
     "next": "15.5.4",
+    "next-sitemap": "^4.2.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "next-sitemap": "^4.2.3"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "typescript": "^5.6.2",
     "@types/node": "^20.11.30",
-    "@types/react": "^18.3.3"
+    "@types/react": "^18.3.3",
+    "typescript": "^5.6.2"
   },
   "engines": {
     "node": ">=18 <=22"
