--- a/package.json
+++ b/package.json
@@ -1,27 +1,33 @@
-{
+﻿{
   "name": "cornerstoneonarum",
-  "private": true,
   "version": "0.1.0",
+  "private": true,
+
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "postbuild": "next-sitemap"
   },
+
   "dependencies": {
-    "@ai-sdk/openai": "^2.0.42",
-    "ai": "^5.0.60",
+    "ai": "5.0.60",
+    "@ai-sdk/openai": "2.0.42",
     "next": "15.5.4",
-    "next-sitemap": "^4.2.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "next-sitemap": "4.2.3"
   },
+
   "devDependencies": {
-    "@types/node": "^20.11.30",
-    "@types/react": "^18.3.3",
-    "typescript": "^5.6.2"
+    "@types/node": "20.19.19",
+    "@types/react": "18.3.25",
+    "typescript": "5.9.3",
+    "tailwindcss": "4.1.14",
+    "@tailwindcss/postcss": "4.1.14"
   },
-  "engines": {
-    "node": ">=18 <=22"
+
+  "pnpm": {
+    "onlyBuiltDependencies": ["@tailwindcss/oxide"]
   }
 }
