--- a/package.json
+++ b/package.json
@@ -1,38 +1,24 @@
 {
   "name": "v0-intelligent-chatbot-for-property",
-  "version": "1.0.0",
-  ...
-  "packageManager": "pnpm@10.0.0"
-}
-{
-  "name": "cornerstoneonarum",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@10.0.0",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3000 -H 127.0.0.1",
     "build": "next build",
     "start": "next start",
-    "postbuild": "next-sitemap"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/openai": "2.0.42",
-    "ai": "5.0.60",
     "next": "15.5.4",
-    "next-sitemap": "4.2.3",
-    "openai": "^4.104.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "openai": "^4.104.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "4.1.14",
-    "@types/node": "20.19.19",
-    "@types/react": "18.3.25",
-    "tailwindcss": "4.1.14",
-    "typescript": "5.9.3"
-  },
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "@tailwindcss/oxide"
-    ]
+    "typescript": "^5.6.3",
+    "@types/react": "^18.3.25",
+    "tailwindcss": "^3.4.13"
   }
 }
