--- a/package.json
+++ b/package.json
@@ -1,19 +1,13 @@
 {
   "name": "v0-intelligent-chatbot-for-property",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "private": true,
   "packageManager": "pnpm@10.0.0",
-  "scripts": {
-    "dev": "next dev -p 3000 -H 127.0.0.1",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
     "next": "15.5.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "openai": "^4.104.0",
+    "openai": "4.104.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
