--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "next": "15.5.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "openai": "4.104.0",
+    "openai": "^4.104.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
