--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "scripts": {
     "dev": "next dev -p 3000 -H 127.0.0.1",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "15.5.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "openai": "^4.104.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "openai": "4.104.0"
   },
   "devDependencies": {
     "typescript": "^5.6.3",
