--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name":  "v0-intelligent-chatbot-for-property",
     "version":  "0.0.0",
     "private":  "true",
-    "packageManager":  "pnpm@10.0.0",
+    "packageManager":  "pnpm@10.11.0",
     "scripts":  {
                     "dev":  "next dev -p 3000 -H 127.0.0.1",
                     "build":  "next build",
@@ -21,5 +21,8 @@
                             "@types/react":  "18.3.25",
                             "tailwindcss":  "3.4.13"
                         },
-    "type":  "module"
+    "type":  "module",
+    "engines":  {
+                    "node":  "\u003e=22"
+                }
 }
