--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 ﻿{
     "name":  "v0-intelligent-chatbot-for-property",
+    "private":  true,
     "version":  "0.0.0",
-    "private":  "true",
-    "packageManager":  "pnpm@10.11.0",
+    "type":  "module",
     "scripts":  {
-                    "dev":  "next dev -p 3000 -H 127.0.0.1",
+                    "dev":  "next dev",
                     "build":  "next build",
                     "start":  "next start",
                     "lint":  "next lint"
                 },
     "dependencies":  {
                          "next":  "15.5.4",
+                         "openai":  "^4.104.0",
                          "react":  "18.3.1",
                          "react-dom":  "18.3.1",
-                         "zod":  "^3.23.8",
-                         "openai":  "4.104.0"
+                         "zod":  "3.25.76"
                      },
     "devDependencies":  {
-                            "typescript":  "5.6.3",
+                            "@tailwindcss/postcss":  "^4.1.14",
+                            "@types/node":  "^24.6.2",
                             "@types/react":  "18.3.25",
-                            "tailwindcss":  "3.4.13"
-                        },
-    "type":  "module",
-    "engines":  {
-                    "node":  "\u003e=22"
-                }
+                            "autoprefixer":  "10.4.21",
+                            "postcss":  "8.5.6",
+                            "tailwindcss":  "3.4.13",
+                            "typescript":  "5.6.3"
+                        }
 }
