--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
-﻿{
+{
   "framework": "nextjs",
   "buildCommand": "pnpm build",
-  "installCommand": "pnpm install --no-frozen-lockfile"
+  "installCommand": "pnpm install --no-frozen-lockfile",
+  "outputDirectory": ".next"
 }
